--- a/RestAssuredDataDrivenFramework/test-output/old/Default suite/classes.html
+++ b/RestAssuredDataDrivenFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testDatabase.TC009_validateResponseJSONPath</td>
+<td>testDatabase.TC003_updateStudent</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getStudentDetails</td>
+<td>updateStudentDetails</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
